--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-# DXowy Bot Environment Variables
+# DXOWY Bot Environment Variables
+# Bu dosyayı .env olarak kopyalayın ve gerçek değerlerinizi girin
+
 TELEGRAM_TOKEN=YOUR_BOT_TOKEN_HERE
 ADMIN_ID=YOUR_ADMIN_ID_HERE
